<resources>
    <string name="app_name">Challenge4</string>
    <string name="tvList"><b>List</b></string>
    <string name="tvLogin"><b>Login</b></string>
    <string name="tvSignup"><b>Sign Up</b></string>
    <string name="etEmail">Masukkan Email</string>
    <string name="tvDaftar">Belum Memiliki Akun?</string>
    <string name="btnLogin">Login</string>
    <string name="etPassword">Masukkan Password</string>
    <string name="etUsername">Masukkan Username</string>
    <string name="btnDaftar">Daftar</string>
    <string name="etVerifSign">Masukkan Konfirmasi Password</string>
    <string name="etPasswordSign">Masukkan Password</string>
    <string name="tvTambahData">Tambah Data</string>
    <string name="etJudulData">Masukkan Judul</string>
    <string name="etCatatanData">Masukkan Catatan</string>
    <string name="btnSimpanData">Simpan</string>
    <string name="tvEditData">Edit Data</string>
    <string name="etJudulEdit">Masukkan Judul</string>
    <string name="etCatatanEdit">Masukkan Catatan</string>
    <string name="btnSimpanEdit">Simpan</string>
    <string name="tvDeleteData">Yakin untuk Menghapus Data ?</string>
    <string name="btnYes">Iya</string>
    <string name="btnNo">Tidak</string>
    <string name="tvUserDisplay">Welcome, %1$s</string>
    <string name="tvLogoutButton">Logout</string>
    <string name="tvJudulList">Home</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btnRefresh">Refresh</string>
    <string name="tvLogoutList">Yakin Untuk Logout ?</string>
</resources>